// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grading NavLink does NOT renders for Role.Student 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/practicals\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Practical
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`Grading NavLink renders for Role.Admin 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/practicals\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Practical
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/material\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"cloud-upload\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Upload
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/gamedev\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Game Dev
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`Grading NavLink renders for Role.Staff 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/practicals\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Practical
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/material\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"cloud-upload\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Upload
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/gamedev\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" aria-current=\\"page\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs\\">
        Game Dev
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;
